// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should create preview of nodes 1`] = `
<Fragment>
  <Tooltip
    content={
      <span
        className="parameterName"
      >
        Running, Canceled or Completed Flow Nodes
      </span>
    }
    overflowOnly={true}
  >
    <span
      className="parameterName"
    >
      Running, Canceled or Completed Flow Nodes
    </span>
  </Tooltip>
  <ul
    className="previewList filterText"
  >
    <li
      className="previewItem"
      key="0"
    >
      <span>
         
        <b>
          foo
        </b>
      </span>
    </li>
  </ul>
</Fragment>
`;

exports[`should create preview of selected nodes linked by nor 1`] = `
<Fragment>
  <Tooltip
    content={
      <span
        className="parameterName"
      >
        Not executed Flow Nodes
      </span>
    }
    overflowOnly={true}
  >
    <span
      className="parameterName"
    >
      Not executed Flow Nodes
    </span>
  </Tooltip>
  <ul
    className="previewList filterText"
  >
    <li
      className="previewItem"
      key="0"
    >
      <span>
         
        <b>
          foo
        </b>
      </span>
    </li>
    <li
      className="previewItem"
      key="1"
    >
      <span>
         
        <span
          className="previewItemOperator"
        >
           
          and
           
        </span>
        <b>
          foo
        </b>
      </span>
    </li>
  </ul>
</Fragment>
`;

exports[`should create preview of selected nodes linked by or 1`] = `
<Fragment>
  <Tooltip
    content={
      <span
        className="parameterName"
      >
        Running, Canceled or Completed Flow Nodes
      </span>
    }
    overflowOnly={true}
  >
    <span
      className="parameterName"
    >
      Running, Canceled or Completed Flow Nodes
    </span>
  </Tooltip>
  <ul
    className="previewList filterText"
  >
    <li
      className="previewItem"
      key="0"
    >
      <span>
         
        <b>
          foo
        </b>
      </span>
    </li>
    <li
      className="previewItem"
      key="1"
    >
      <span>
         
        <span
          className="previewItemOperator"
        >
           
          or
           
        </span>
        <b>
          foo
        </b>
      </span>
    </li>
  </ul>
</Fragment>
`;

exports[`should show the id of the flow node if the name is null 1`] = `
<b>
  bar
</b>
`;
